--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,26 @@
-header { 
-	font-size: 16px;
+head { 
+	font-size: 20px;
 	font-family: Helvetica, Verdana;
 }
 
 body {
 	background: white;
-	font-size: 10px;
+	font-size: 16px;
 	font-family: helvetica, verdana;
 }
 
 h1 {
-	font-size: 16px;
+	font-size: 20px;
 	color: black;
 }
 
 h2 {
-	font-size: 16px;
+	font-size: 20px;
 	color: black;
 }
 
 h3 {
-	font-size: 16px;
+	font-size: 20px;
 	color: black;
 }
 
