--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 head { 
 	font-size: 20px;
-	font-family: Helvetica, Verdana;
+	font-family: ".example2", Verdana;
 }
 
 body {
 	background: white;
 	font-size: 16px;
-	font-family: helvetica, verdana;
+	font-family: ".example2", verdana;
 	margin:10px
 }
 
