--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,29 @@
 head { 
 	font-size: 20px;
-	font-family: ".example2", Verdana;
+	font-family: ".example2", verdana;
 }
 
 body {
-	background: white;
+	background: #FFFFFF;
 	font-size: 16px;
 	font-family: ".example2", verdana;
-	margin:10px
+	margin: 10px
 }
 
 h1 {
 	font-size: 20px;
 	color: black;
+	margin: 10px;
 }
 
 h2 {
 	font-size: 20px;
 	color: black;
+	margin: 10px;
 }
 
 h3 {
 	font-size: 20px;
 	color: black;
+	margin: 10px;
 }
-
-
