--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 head { 
 	font-size: 20px;
-	font-family: ".example2", verdana;
+	font-family: ".example2", gill sans; verdana;
 }
 title {
 	font-size: 20px;
