Changes at home
stuff

--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,18 @@ body {
 
 		color: #563f7c;
 	}
+
+p{
+	padding:25px;
+	padding-top:100px;
+	padding-bottom:155px;
+	border:25px;
+	border-style:solid;
+	border-color:#CDE9E6;
+	
+	
+	float:right;
+	margin-right:100px;
+	margin-left:;
+	margin-top:;
+}
